cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_COMPILER g++)
set( CMAKE_EXPORT_COMPILE_COMMANDS 1 )
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-lpthread -lboost_log")
#set(Boost_USE_STATIC_LIBS ON)
ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
find_package(Boost 1.58.0 COMPONENTS system log thread  REQUIRED)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(main src/main.cpp src/server.h src/acceptor.h 
        src/service.h src/config.h src/application.h src/application.cpp src/log.h src/log.cpp src/daemon.h)
    target_link_libraries(main ${Boost_LIBRARIES})
    target_link_libraries (main ${CMAKE_THREAD_LIBS_INIT})
endif()
