cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_COMPILER g++)
set( CMAKE_EXPORT_COMPILE_COMMANDS 1 )
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-lpthread -lboost_log")
#set(Boost_USE_STATIC_LIBS ON)
ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
find_package(Boost 1.58.0 COMPONENTS system log thread  REQUIRED)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(rrd src/main.cpp src/server.h src/server.cpp  src/acceptor.h src/acceptor.cpp 
        src/service.h src/service.cpp  src/config.h src/config.cpp src/application.h 
        src/application.cpp src/log.h src/log.cpp src/daemon.h)
    target_link_libraries(rrd ${Boost_LIBRARIES})
    target_link_libraries (rrd ${CMAKE_THREAD_LIBS_INIT})
endif()
